feat: implement user settings and deposit-withdrawll features